--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "nodemailer": "^2.6.4",
+    "request": "^2.79.0",
     "socket.io": "^1.6.0",
     "sqlite3": "^3.1.8"
   }
