update is broken but fuck it...

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/PatrickShaw/spotless_api#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "nodemailer": "^2.6.4",
     "request": "^2.79.0",
